syntax = "proto3";

package com.warrior.demo.grpc;
//options generated for java
option java_package = "com.warrior.demo.grpc";
option java_outer_classname = "DuesProto";
option java_multiple_files = true;



message Error {
    string code = 1;
    string message = 2;
}

message DueCharges {
    string convienceFee = 1;
    string lateFee = 2;
}


message DuesDetail {
  string loanAccountNumber = 1;
  double dueAmount = 2;
  double principal = 3;
  double interest = 4;
  DueCharges dueCharges = 5;
  double outstandingPrincipal = 6;
  int64 dueDate = 7;
  double excess = 8;
}

message DuesResponse {
  repeated DuesDetail duesDetail = 1;
  Error error = 2;
}

message DuesRequest {
  string loanAccountNumber = 1;
  string clientId = 2;
}


service DuesService {
  rpc getDuesDetail(DuesRequest) returns (DuesResponse);
}
